<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:title="@string/app_name"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageButton
                android:id="@+id/btnChangeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/change_date"
                android:src="@drawable/ic_event_black_24dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:id="@+id/mainAreaLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/previousDayLayout"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/previous"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dataLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/morning" />

                <LinearLayout
                    android:id="@+id/morningLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/morningTime"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <ImageButton
                        android:id="@+id/btnChangeMorningTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/change_time"
                        android:src="@drawable/ic_access_time_black_24dp" />

                    <ImageButton
                        android:id="@+id/btnMorningTimeNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/now"
                        android:src="@drawable/ic_arrow_downward_black_24dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/lunch_start" />

                <LinearLayout
                    android:id="@+id/lunchStartLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lunchStartTime"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <ImageButton
                        android:id="@+id/btnChangeLunchStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/change_time"
                        android:src="@drawable/ic_access_time_black_24dp" />

                    <ImageButton
                        android:id="@+id/btnLunchStartTimeNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/now"
                        android:src="@drawable/ic_arrow_downward_black_24dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/lunch_end" />

                <LinearLayout
                    android:id="@+id/lunchEndLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lunchEndTime"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <ImageButton
                        android:id="@+id/btnChangeLunchEndTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/change_time"
                        android:src="@drawable/ic_access_time_black_24dp" />

                    <ImageButton
                        android:id="@+id/btnLunchEndNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/now"
                        android:src="@drawable/ic_arrow_downward_black_24dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/evening" />

                <LinearLayout
                    android:id="@+id/eveningLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/eveningTime"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <ImageButton
                        android:id="@+id/btnChangeEveningTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/change_time"
                        android:src="@drawable/ic_access_time_black_24dp" />

                    <ImageButton
                        android:id="@+id/btnEveningTimeNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/now"
                        android:src="@drawable/ic_arrow_downward_black_24dp" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/validation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text=""
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <!-- empty view to align "next day" button to the right -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/nextDayLayout"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/previous"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/total" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/btnRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/refresh"
                android:src="@drawable/ic_refresh_black_24dp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/save"
                android:src="@drawable/ic_save_black_24dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/weekTotal" />

        <TextView
            android:id="@+id/tvWeekTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
